fixed the alignment

--- a/Styles/filter.css
+++ b/Styles/filter.css
@@ -5,12 +5,6 @@
     vertical-align: top;
 }
 
-.index_margins {
-    vertical-align: top;
-    width: 20%;
-}
-
-
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
